# liveSample

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/wwb/live/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  VideoChannel.cpp  VideoChannel.h  lib-native.cpp  live-pusher.cpp  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/include/libavfilter/: avfilter.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/wwb/live/: AudioChannel.java  CameraHelper.java  CameraManager.java  LivePusher.java  MainActivity.java  TestNdkHandler.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/wwb/live/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
